# motorized-couch-v4

./: README.md  current_monitor.py  main.py  pyproject.toml
backend/: README.md  app.py  battery.py  couch.py  drive_modes.py  main.py  mathutils.py  motor_controller.py  odrive_main.py  pyproject.toml  pyrightconfig.json  screen_ui.py  screen_ui_v2.py  test.py  test_motor_temp.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: CouchVisualization.tsx  Dial.tsx
frontend/src/configurations/: paths.ts
frontend/src/hooks/: useDashboardWebSocket.ts
frontend/src/layouts/main/: layout.tsx
frontend/src/pages/: home-page.tsx
frontend/src/public/: couch.glb
frontend/src/routes/: main-routes.tsx
