[project]
name = "motorized-couch-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "pyvesc",
    "uvicorn[standard]>=0.34.3",
]

[tool.uv.sources]
pyvesc = { git = "https://github.com/LiamBindle/PyVESC" }
